--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://your_username:your_password@cluster.mongodb.net/portfolio
+MONGO_URI=<your mongodb_connection_string_here>
 JWT_SECRET=your_jwt_secret_key_here
 PORT=5000
 # Local: http://localhost:5173
