--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,13 +9,8 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/index.js"
+      "dest": "src/index.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
     }
-  ],
-  "env": {
-    "MONGO_URI": "@mongo_uri",
-    "JWT_SECRET": "@jwt_secret",
-    "FRONTEND_ORIGIN": "@frontend_origin",
-    "PORT": "5000"
-  }
+  ]
 }
