--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,9 @@ PORT=5000
 FRONTEND_ORIGIN=http://localhost:5173
 ADMIN_USERNAME=<your_admin_username_here>
 ADMIN_PASSWORD=<your_password_here>
+
+# Cloudinary (for image uploads)
+CLOUDINARY_CLOUD_NAME=<your_cloud_name>
+CLOUDINARY_API_KEY=<your_api_key>
+CLOUDINARY_API_SECRET=<your_api_secret>
+CLOUDINARY_FOLDER=portfolio
