--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "cloudinary": "^1.41.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.6.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
